1.5.0/_sources/reference/dipy.segment.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`segment`
==============
.. automodule:: dipy.segment

.. currentmodule:: dipy.segment
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.benchmarks`
---------------------------------
.. automodule:: dipy.segment.benchmarks

.. currentmodule:: dipy.segment.benchmarks
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.benchmarks.bench_quickbundles`
----------------------------------------------------
.. automodule:: dipy.segment.benchmarks.bench_quickbundles

.. currentmodule:: dipy.segment.benchmarks.bench_quickbundles
.. autosummary::

   MDFpy
   Metric
   QB_New
   Streamlines
   assert_array_equal
   assert_arrays_equal
   assert_equal
   bench_quickbundles
   get_fnames
   load_tractogram
   measure
   set_number_of_points

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.bundles`
------------------------------
.. automodule:: dipy.segment.bundles

.. currentmodule:: dipy.segment.bundles
.. autosummary::

   BundleMinDistanceAsymmetricMetric
   BundleMinDistanceMetric
   BundleSumDistanceMatrixMetric
   RecoBundles
   StreamlineLinearRegistration
   Streamlines
   chain
   apply_affine
   ba_analysis
   bundle_adjacency
   bundle_shape_similarity
   bundles_distances_mam
   bundles_distances_mdf
   check_range
   cluster_bundle
   deprecated_params
   length
   nbytes
   qbx_and_merge
   select_random_set_of_streamlines
   set_number_of_points
   time

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.clustering`
---------------------------------
.. automodule:: dipy.segment.clustering

.. currentmodule:: dipy.segment.clustering
.. autosummary::

   ABCMeta
   AveragePointwiseEuclideanMetric
   Cluster
   ClusterCentroid
   ClusterMap
   ClusterMapCentroid
   Clustering
   Identity
   Metric
   MinimumAverageDirectFlipMetric
   QuickBundles
   QuickBundlesX
   ResampleFeature
   TreeCluster
   TreeClusterMap
   abstractmethod
   nbytes
   qbx_and_merge
   set_number_of_points
   time

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.clustering_algorithms`
--------------------------------------------
.. automodule:: dipy.segment.clustering_algorithms

.. currentmodule:: dipy.segment.clustering_algorithms
.. autosummary::

   ClusterCentroid
   ClusterMapCentroid
   DTYPE
   clusters_centroid2clustermap_centroid
   peek
   quickbundles
   quickbundlesx

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.clusteringspeed`
--------------------------------------
.. automodule:: dipy.segment.clusteringspeed

.. currentmodule:: dipy.segment.clusteringspeed
.. autosummary::

   ClusterCentroid
   ClusterMapCentroid
   Clusters
   ClustersCentroid
   DTYPE
   QuickBundles
   QuickBundlesX
   TreeCluster
   TreeClusterMap
   evaluate_aabb_checks

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.cythonutils`
----------------------------------
.. automodule:: dipy.segment.cythonutils

.. currentmodule:: dipy.segment.cythonutils
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.featurespeed`
-----------------------------------
.. automodule:: dipy.segment.featurespeed

.. currentmodule:: dipy.segment.featurespeed
.. autosummary::

   ArcLengthFeature
   CenterOfMassFeature
   CythonFeature
   Feature
   IdentityFeature
   MidpointFeature
   ResampleFeature
   VectorOfEndpointsFeature
   extract
   infer_shape

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.mask`
---------------------------
.. automodule:: dipy.segment.mask

.. currentmodule:: dipy.segment.mask
.. autosummary::

   applymask
   binary_dilation
   bounding_box
   clean_cc_mask
   color_fa
   crop
   fractional_anisotropy
   generate_binary_structure
   median_filter
   median_otsu
   multi_median
   otsu
   segment_from_cfa
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.metric`
-----------------------------
.. automodule:: dipy.segment.metric

.. currentmodule:: dipy.segment.metric
.. autosummary::

   AveragePointwiseEuclideanMetric
   CosineMetric
   EuclideanMetric
   Metric
   MinimumAverageDirectFlipMetric
   SumPointwiseEuclideanMetric
   dist
   mdf

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.metricspeed`
----------------------------------
.. automodule:: dipy.segment.metricspeed

.. currentmodule:: dipy.segment.metricspeed
.. autosummary::

   AveragePointwiseEuclideanMetric
   CosineMetric
   CythonMetric
   Metric
   MinimumAverageDirectFlipMetric
   SumPointwiseEuclideanMetric
   dist
   distance_matrix

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.mrf`
--------------------------
.. automodule:: dipy.segment.mrf

.. currentmodule:: dipy.segment.mrf
.. autosummary::

   ConstantObservationModel
   IteratedConditionalModes
   add_noise
   applymask
   ndindex

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.threshold`
--------------------------------
.. automodule:: dipy.segment.threshold

.. currentmodule:: dipy.segment.threshold
.. autosummary::

   otsu
   upper_bound_by_percent
   upper_bound_by_rate

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.tissue`
-----------------------------
.. automodule:: dipy.segment.tissue

.. currentmodule:: dipy.segment.tissue
.. autosummary::

   ConstantObservationModel
   IteratedConditionalModes
   TissueClassifierHMRF
   add_noise


.. currentmodule:: dipy.segment


.. currentmodule:: dipy.segment.benchmarks


.. currentmodule:: dipy.segment.benchmarks.bench_quickbundles


:class:`MDFpy`
~~~~~~~~~~~~~~


.. autoclass:: MDFpy
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Metric`
~~~~~~~~~~~~~~~


.. autoclass:: Metric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QB_New`
~~~~~~~~~~~~~~~


.. autoclass:: QB_New
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Streamlines`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Streamlines
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

assert_array_equal
~~~~~~~~~~~~~~~~~~

.. autofunction:: assert_array_equal

assert_arrays_equal
~~~~~~~~~~~~~~~~~~~

.. autofunction:: assert_arrays_equal

assert_equal
~~~~~~~~~~~~

.. autofunction:: assert_equal

bench_quickbundles
~~~~~~~~~~~~~~~~~~

.. autofunction:: bench_quickbundles

get_fnames
~~~~~~~~~~

.. autofunction:: get_fnames

load_tractogram
~~~~~~~~~~~~~~~

.. autofunction:: load_tractogram

measure
~~~~~~~

.. autofunction:: measure

set_number_of_points
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_number_of_points


.. currentmodule:: dipy.segment.bundles


:class:`BundleMinDistanceAsymmetricMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BundleMinDistanceAsymmetricMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`BundleMinDistanceMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BundleMinDistanceMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`BundleSumDistanceMatrixMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BundleSumDistanceMatrixMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RecoBundles`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RecoBundles
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`StreamlineLinearRegistration`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: StreamlineLinearRegistration
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Streamlines`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Streamlines
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`chain`
~~~~~~~~~~~~~~


.. autoclass:: chain
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

apply_affine
~~~~~~~~~~~~

.. autofunction:: apply_affine

ba_analysis
~~~~~~~~~~~

.. autofunction:: ba_analysis

bundle_adjacency
~~~~~~~~~~~~~~~~

.. autofunction:: bundle_adjacency

bundle_shape_similarity
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bundle_shape_similarity

bundles_distances_mam
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bundles_distances_mam

bundles_distances_mdf
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bundles_distances_mdf

check_range
~~~~~~~~~~~

.. autofunction:: check_range

cluster_bundle
~~~~~~~~~~~~~~

.. autofunction:: cluster_bundle

deprecated_params
~~~~~~~~~~~~~~~~~

.. autofunction:: deprecated_params

length
~~~~~~

.. autofunction:: length

nbytes
~~~~~~

.. autofunction:: nbytes

qbx_and_merge
~~~~~~~~~~~~~

.. autofunction:: qbx_and_merge

select_random_set_of_streamlines
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: select_random_set_of_streamlines

set_number_of_points
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_number_of_points

time
~~~~

.. autofunction:: time


.. currentmodule:: dipy.segment.clustering


:class:`ABCMeta`
~~~~~~~~~~~~~~~~


.. autoclass:: ABCMeta
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`AveragePointwiseEuclideanMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: AveragePointwiseEuclideanMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Cluster`
~~~~~~~~~~~~~~~~


.. autoclass:: Cluster
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ClusterCentroid`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClusterCentroid
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ClusterMap`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClusterMap
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ClusterMapCentroid`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClusterMapCentroid
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Clustering`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: Clustering
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Identity`
~~~~~~~~~~~~~~~~~


.. autoclass:: Identity
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Metric`
~~~~~~~~~~~~~~~


.. autoclass:: Metric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MinimumAverageDirectFlipMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MinimumAverageDirectFlipMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QuickBundles`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: QuickBundles
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QuickBundlesX`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: QuickBundlesX
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ResampleFeature`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ResampleFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TreeCluster`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TreeCluster
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TreeClusterMap`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TreeClusterMap
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

abstractmethod
~~~~~~~~~~~~~~

.. autofunction:: abstractmethod

nbytes
~~~~~~

.. autofunction:: nbytes

qbx_and_merge
~~~~~~~~~~~~~

.. autofunction:: qbx_and_merge

set_number_of_points
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_number_of_points

time
~~~~

.. autofunction:: time


.. currentmodule:: dipy.segment.clustering_algorithms


:class:`ClusterCentroid`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClusterCentroid
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ClusterMapCentroid`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClusterMapCentroid
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DTYPE`
~~~~~~~~~~~~~~


.. autoclass:: DTYPE
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

clusters_centroid2clustermap_centroid
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: clusters_centroid2clustermap_centroid

peek
~~~~

.. autofunction:: peek

quickbundles
~~~~~~~~~~~~

.. autofunction:: quickbundles

quickbundlesx
~~~~~~~~~~~~~

.. autofunction:: quickbundlesx


.. currentmodule:: dipy.segment.clusteringspeed


:class:`ClusterCentroid`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClusterCentroid
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ClusterMapCentroid`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClusterMapCentroid
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Clusters`
~~~~~~~~~~~~~~~~~


.. autoclass:: Clusters
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ClustersCentroid`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClustersCentroid
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DTYPE`
~~~~~~~~~~~~~~


.. autoclass:: DTYPE
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QuickBundles`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: QuickBundles
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QuickBundlesX`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: QuickBundlesX
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TreeCluster`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TreeCluster
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TreeClusterMap`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TreeClusterMap
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

evaluate_aabb_checks
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: evaluate_aabb_checks


.. currentmodule:: dipy.segment.cythonutils


.. currentmodule:: dipy.segment.featurespeed


:class:`ArcLengthFeature`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ArcLengthFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CenterOfMassFeature`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CenterOfMassFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CythonFeature`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CythonFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Feature`
~~~~~~~~~~~~~~~~


.. autoclass:: Feature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`IdentityFeature`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IdentityFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MidpointFeature`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MidpointFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ResampleFeature`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ResampleFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`VectorOfEndpointsFeature`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: VectorOfEndpointsFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

extract
~~~~~~~

.. autofunction:: extract

infer_shape
~~~~~~~~~~~

.. autofunction:: infer_shape


.. currentmodule:: dipy.segment.mask

applymask
~~~~~~~~~

.. autofunction:: applymask

binary_dilation
~~~~~~~~~~~~~~~

.. autofunction:: binary_dilation

bounding_box
~~~~~~~~~~~~

.. autofunction:: bounding_box

clean_cc_mask
~~~~~~~~~~~~~

.. autofunction:: clean_cc_mask

color_fa
~~~~~~~~

.. autofunction:: color_fa

crop
~~~~

.. autofunction:: crop

fractional_anisotropy
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: fractional_anisotropy

generate_binary_structure
~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: generate_binary_structure

median_filter
~~~~~~~~~~~~~

.. autofunction:: median_filter

median_otsu
~~~~~~~~~~~

.. autofunction:: median_otsu

multi_median
~~~~~~~~~~~~

.. autofunction:: multi_median

otsu
~~~~

.. autofunction:: otsu

segment_from_cfa
~~~~~~~~~~~~~~~~

.. autofunction:: segment_from_cfa

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.segment.metric


:class:`AveragePointwiseEuclideanMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: AveragePointwiseEuclideanMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CosineMetric`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CosineMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`EuclideanMetric`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: EuclideanMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Metric`
~~~~~~~~~~~~~~~


.. autoclass:: Metric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MinimumAverageDirectFlipMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MinimumAverageDirectFlipMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SumPointwiseEuclideanMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SumPointwiseEuclideanMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

dist
~~~~

.. autofunction:: dist

mdf
~~~

.. autofunction:: mdf


.. currentmodule:: dipy.segment.metricspeed


:class:`AveragePointwiseEuclideanMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: AveragePointwiseEuclideanMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CosineMetric`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CosineMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CythonMetric`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CythonMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Metric`
~~~~~~~~~~~~~~~


.. autoclass:: Metric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MinimumAverageDirectFlipMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MinimumAverageDirectFlipMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SumPointwiseEuclideanMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SumPointwiseEuclideanMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

dist
~~~~

.. autofunction:: dist

distance_matrix
~~~~~~~~~~~~~~~

.. autofunction:: distance_matrix


.. currentmodule:: dipy.segment.mrf


:class:`ConstantObservationModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConstantObservationModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`IteratedConditionalModes`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IteratedConditionalModes
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

add_noise
~~~~~~~~~

.. autofunction:: add_noise

applymask
~~~~~~~~~

.. autofunction:: applymask

ndindex
~~~~~~~

.. autofunction:: ndindex


.. currentmodule:: dipy.segment.threshold

otsu
~~~~

.. autofunction:: otsu

upper_bound_by_percent
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: upper_bound_by_percent

upper_bound_by_rate
~~~~~~~~~~~~~~~~~~~

.. autofunction:: upper_bound_by_rate


.. currentmodule:: dipy.segment.tissue


:class:`ConstantObservationModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConstantObservationModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`IteratedConditionalModes`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IteratedConditionalModes
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TissueClassifierHMRF`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TissueClassifierHMRF
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

add_noise
~~~~~~~~~

.. autofunction:: add_noise

